crates/vise/tests/ui/labels/unimplemented_format.stderr
error[E0277]: `Label` doesn't implement `std::fmt::Display`
 --> tests/ui/labels/unimplemented_format.rs:4:20
  |
4 | #[metrics(format = "{}")]
  |                    ^--^
  |                    ||
  |                    |required by this formatting parameter
  |                    `Label` cannot be formatted with the default formatter
  |
help: the trait `std::fmt::Display` is not implemented for `Label`
 --> tests/ui/labels/unimplemented_format.rs:5:1
  |
5 | enum Label {
  | ^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: required for `&Label` to implement `std::fmt::Display`
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `::core::write` (in Nightly builds, run with -Z macro-backtrace for more info)
